--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.7",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "sass": "^1.55.0",
