--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.2",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.0.3",
     "firebase": "^9.12.1",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
